Added another blog and projects

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -85,7 +85,7 @@
                     <p><b>Projects</b></p>
                 </div>
                 <div class="col-sm-2">
-                    <p class="pull-right">@Html.ActionLink("View all", "Index", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("View all", "Projects", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
@@ -93,15 +93,15 @@
         <div class="panel-body">
             <div class="jumbotron" style="padding:0">
                 <div class="thumbnail">
-                    <img src="http://www.nisville.com/images/Incognito.jpg" alt="...">
+                    <img src="http://www.nisville.com/images/Incognito.jpg" alt="..." />
                 </div>
             </div>
             <div class="panel-title">
                 <div class="row">
-                    <div class="col-sm-3">Project Name</div>
-                    <div class="col-sm-2">Start Date</div>
-                    <div class="col-sm-2">End Date</div>
-                    <div class="col-sm-2">Phase</div>
+                    <div class="col-sm-3 h4">Project Name</div>
+                    <div class="col-sm-2 h4">Start Date</div>
+                    <div class="col-sm-2 h4">End Date</div>
+                    <div class="col-sm-2 h4">Phase</div>
                 </div>
                 <hr />
             </div>
@@ -111,16 +111,16 @@
                 <div class="col-sm-2">2008-02-18</div>
                 <div class="col-sm-2">Done</div>
                 <div class="col-sm-3">
-                    <p class="pull-right">@Html.ActionLink("Go to project", "Projects", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsOne", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-3">Surreal</div>
                 <div class="col-sm-2">2012-10-23</div>
                 <div class="col-sm-2">2015-06-07</div>
-                <div class="col-sm-2">Mastering</div>
+                <div class="col-sm-2">Re-Mastering</div>
                 <div class="col-sm-3">
-                    <p class="pull-right">@Html.ActionLink("Go to project", "Projects", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsTwo", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
             <div class="row">
@@ -129,7 +129,7 @@
                 <div class="col-sm-2">2016-01-29</div>
                 <div class="col-sm-2">Mixing</div>
                 <div class="col-sm-3">
-                    <p class="pull-right">@Html.ActionLink("Go to project", "Projects", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                    <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsThree", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
         </div>
@@ -148,6 +148,7 @@
             </div>
         </div>
         <!-- Blogs Body -->
+        <!-- First -->
         <div class="row">
             <div class="container-fluid">
                 <div class="panel panel-default col-sm-8" style="margin-bottom:0;">
@@ -191,9 +192,10 @@
                 </div>
             </div>
         </div>
+        <!-- Second -->
         <div class="row">
             <div class="container-fluid">
-                <div class="panel panel-default col-sm-8">
+                <div class="panel panel-default col-sm-8" style="margin-bottom:0;">
                     <div class="panel-body" style="background-color:#E4E0FC">
                         <div class="col-sm-12">
                             <div class="h3">Needed feebly</div>
@@ -214,6 +216,7 @@
                             <p class="pull-right">@Html.ActionLink("Read More", "BlogsTwo", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                         </div>
                     </div>
+                    <hr />
                 </div>
                 <div class="panel panel-default col-sm-4">
                     <div class="panel-body" style="background-color:#E4E0FC">
@@ -227,6 +230,49 @@
                             <p>
                                 Am of mr friendly by strongly peculiar juvenile.
                                 Unpleasant it sufficient simplicity am by friendship no inhabiting.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Third -->
+        <div class="row">
+            <div class="container-fluid">
+                <div class="panel panel-default col-sm-8" style="margin-bottom:0;">
+                    <div class="panel-body" style="background-color:#C1A7A7">
+                        <div class="col-sm-12">
+                            <div class="h3">Two assure Edward</div>
+                            <p>
+                                Two assure edward whence the was.
+                                Who worthy yet ten boy denote wonder. 
+                                Weeks views her sight old tears sorry. 
+                                Additions can suspected its concealed put furnished. 
+                                Met the why particular devonshire decisively considered partiality. 
+                                Certain it waiting no entered is. 
+                                Passed her indeed uneasy shy polite appear denied. 
+                                Oh less girl no walk. At he spot with five of view. 
+                            </p>
+                        </div>
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">@Html.ActionLink("Read More", "BlogsThree", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                        </div>
+                    </div>
+                    <hr />
+                </div>
+                <div class="panel panel-default col-sm-4">
+                    <div class="panel-body" style="background-color:#C1A7A7">
+                        <div class="col-sm-4">
+                            <div class="thumbnail" style="margin-top:20px;">
+                                <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="h3">C. Baine</div>
+                            <p>
+                                Surrounded affronting favourable no mr. 
+                                Lain knew like half she yet joy.
+                                Off fat address attacks his besides.
                             </p>
                         </div>
                     </div>
