--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/Blogs.cshtml
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="container-fluid">
                 <div class="panel panel-default col-sm-8" style="margin-bottom:0">
-                    <div class="panel-body" style="background-color:#f7f7f7; margin-top:20px">
+                    <div class="panel-body" style="background-color:#F2EFDC; margin-top:20px">
                         <div class="col-sm-12">
                             <div class="h3">
                                 Folly words
@@ -38,7 +38,7 @@
                     <hr />
                 </div>
                 <div class="panel panel-default col-sm-4">
-                    <div class="panel-body" style="margin-top:20px;">
+                    <div class="panel-body" style="margin-top:20px; background-color:#F2EFDC">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
                                 <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
@@ -46,7 +46,7 @@
                         </div>
                         <div class="col-sm-8">
                             <div class="h3">
-                                M.W. Gaine
+                                A. Penny
                             </div>
                             <p>
                                 Mr my ready guest ye after short at.
@@ -60,8 +60,8 @@
         </div>
         <div class="row">
             <div class="container-fluid">
-                <div class="panel panel-default col-sm-8">
-                    <div class="panel-body" style="background-color:azure">
+                <div class="panel panel-default col-sm-8" style="margin-bottom:0">
+                    <div class="panel-body" style="background-color:#E4E0FC">
                         <div class="col-sm-12">
                             <div class="h3">
                                 Needed feebly
@@ -79,10 +79,14 @@
                                 Prevailed remainder may propriety can and.
                             </p>
                         </div>
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">@Html.ActionLink("Read More", "BlogsTwo", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                        </div>
                     </div>
+                    <hr />
                 </div>
                 <div class="panel panel-default col-sm-4">
-                    <div class="panel-body" style="background-color:azure">
+                    <div class="panel-body" style="background-color:#E4E0FC">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
                                 <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
@@ -142,6 +146,48 @@
             </div>
             <hr />
         </div> -->
+        <div class="row">
+            <div class="container-fluid">
+                <div class="panel panel-default col-sm-8">
+                    <div class="panel-body" style="background-color:#C1A7A7">
+                        <div class="col-sm-12">
+                            <div class="h3">Two assure Edward</div>
+                            <p>
+                                Two assure edward whence the was.
+                                Who worthy yet ten boy denote wonder.
+                                Weeks views her sight old tears sorry.
+                                Additions can suspected its concealed put furnished.
+                                Met the why particular devonshire decisively considered partiality.
+                                Certain it waiting no entered is.
+                                Passed her indeed uneasy shy polite appear denied.
+                                Oh less girl no walk. At he spot with five of view.
+                            </p>
+                        </div>
+                        <div class="col-sm-3 col-sm-offset-9">
+                            <p class="pull-right">@Html.ActionLink("Read More", "BlogsThree", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
+                        </div>
+                    </div>
+                    <hr />
+                </div>
+                <div class="panel panel-default col-sm-4">
+                    <div class="panel-body" style="background-color:#C1A7A7">
+                        <div class="col-sm-4">
+                            <div class="thumbnail" style="margin-top:20px;">
+                                <img class="img-responsive" style="max-height:100px" src="https://nirrep.files.wordpress.com/2014/09/incognito.jpg">
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="h3">C. Baine</div>
+                            <p>
+                                Surrounded affronting favourable no mr.
+                                Lain knew like half she yet joy.
+                                Off fat address attacks his besides.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
