--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
@@ -63,9 +63,11 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="container-fluid text-center">
+            <a href="#myPage" title="To Top">
+                <span class="glyphicon glyphicon-chevron-up"></span>
+            </a>
             <p class="pull-left">&copy; @DateTime.Now.Year - Stebra Consulting</p>
-            <p class="pull-right">alltid lite bättre</p>
         </footer>
     </div>
 
