--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
@@ -46,15 +46,15 @@
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav pull-left">
+                    <ul id="flashNav" class="nav navbar-nav pull-left">
                         @*
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         *@
-                        <li><a id="navNews" @*onclick="SmoothSlide('#myNews')"*@ @*href="#myNews"*@>News</a></li>
-                        <li><a id="navProjects" @*onclick="SmoothSlide('#myProjects')"*@ @*href="#myProjects"*@>Projects</a></li>
-                        <li><a id="navBlogs" @*onclick="SmoothSlide('#myBlogs')"*@ @*href="#myBlogs"*@>Blogs</a></li>
+                        <li><a id="navNews" >News</a></li>
+                        <li><a id="navProjects" >Projects</a></li>
+                        <li><a id="navBlogs" >Blogs</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
