Footer color returned, removed .well box-shadow

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Content/Site.css
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Content/Site.css
@@ -49,6 +49,7 @@ hr {
 
 .panel {
     border: none !important;
+    box-shadow:none;
 }
 
 .panel-body {
@@ -131,4 +132,7 @@ hr {
 
 [role=button]{
     cursor:pointer;
+}
+.well{
+    box-shadow:none;
 }
