--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Shared/_Layout.cshtml
@@ -65,8 +65,9 @@
         <hr />
         <footer class="container-fluid text-center">
             <div class="row">
-                <a href="#top" class="well well-sm" onclick="$('html,body').animate({scrollTop:0},'slow');return false;" style="background-color:#e0e5e4;">
-                    <i class="glyphicon glyphicon-chevron-up"></i> Back to Top
+                <a href="#top" class="well well-sm center-block" onclick="$('html,body').animate({scrollTop:0},'slow');return false;" style="text-decoration:none; background-color:#e0e5e4">
+                    <i class="glyphicon glyphicon-chevron-up"></i>
+                    <p>Back to Top</p>
                 </a>
             </div>
             <p class="pull-left">&copy; @DateTime.Now.Year - Stebra Consulting</p>
