Headings work in @media (min-width:768px)

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -7,10 +7,10 @@
     <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="row">
-                <div class="col-sm-10">
+                <div class="col-xs-9">
                     <p><b>News</b></p>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-xs-3">
                     <p class="pull-right">@Html.ActionLink("View all", "News", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
@@ -80,10 +80,10 @@
     <div class="panel panel-success slideanim">
         <div class="panel-heading">
             <div class="row">
-                <div class="col-sm-10">
+                <div class="col-xs-9">
                     <p><b>Projects</b></p>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-xs-3">
                     <p class="pull-right">@Html.ActionLink("View all", "Projects", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
@@ -95,39 +95,39 @@
                     <img src="http://www.nisville.com/images/Incognito.jpg" alt="..." />
                 </div>
             </div>
-            <div class="panel-title">
+            <div class="panel-default">
                 <div class="row">
-                    <div class="col-sm-3 h4">Project Name</div>
-                    <div class="col-sm-2 h4">Start Date</div>
-                    <div class="col-sm-2 h4">End Date</div>
-                    <div class="col-sm-2 h4">Phase</div>
+                    <div class="col-xs-3">Project Name</div>
+                    <div class="col-xs-2">Start Date</div>
+                    <div class="col-xs-2">End Date</div>
+                    <div class="col-xs-2">Phase</div>
                 </div>
                 <hr />
             </div>
             <div class="row ">
-                <div class="col-sm-3">Tales from the Beach</div>
-                <div class="col-sm-2">2006-04-12</div>
-                <div class="col-sm-2">2008-02-18</div>
-                <div class="col-sm-2">Done</div>
-                <div class="col-sm-3">
+                <div class="col-xs-3">Tales from the Beach</div>
+                <div class="col-xs-2">2006-04-12</div>
+                <div class="col-xs-2">2008-02-18</div>
+                <div class="col-xs-2">Done</div>
+                <div class="col-xs-3">
                     <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsOne", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">Surreal</div>
-                <div class="col-sm-2">2012-10-23</div>
-                <div class="col-sm-2">2015-06-07</div>
-                <div class="col-sm-2">Re-Mastering</div>
-                <div class="col-sm-3">
+                <div class="col-xs-3">Surreal</div>
+                <div class="col-xs-2">2012-10-23</div>
+                <div class="col-xs-2">2015-06-07</div>
+                <div class="col-xs-2">Re-Mastering</div>
+                <div class="col-xs-3">
                     <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsTwo", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">Amplified Soul</div>
-                <div class="col-sm-2">2015-07-01</div>
-                <div class="col-sm-2">2016-01-29</div>
-                <div class="col-sm-2">Mixing</div>
-                <div class="col-sm-3">
+                <div class="col-xs-3">Amplified Soul</div>
+                <div class="col-xs-2">2015-07-01</div>
+                <div class="col-xs-2">2016-01-29</div>
+                <div class="col-xs-2">Mixing</div>
+                <div class="col-xs-3">
                     <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsThree", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
@@ -138,10 +138,10 @@
     <div class="panel panel-info slideanim">
         <div class="panel-heading">
             <div class="row">
-                <div class="col-sm-10">
+                <div class="col-xs-9">
                     <p><b>Blogs</b></p>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-xs-3">
                     <p class="pull-right">@Html.ActionLink("View all", "Blogs", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                 </div>
             </div>
@@ -166,7 +166,7 @@
                                 Up as meant widow equal an share least.
                             </p>
                         </div>
-                        <div class="col-sm-3 col-sm-offset-9">
+                        <div class="col-sm-4 col-sm-offset-8">
                             <p class="pull-right">@Html.ActionLink("Read More", "BlogsOne", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
                         </div>
                     </div>
