--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/ProjectsOne.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/ProjectsOne.cshtml
@@ -21,22 +21,19 @@
         <!-- Projects Body -->
         <div class="panel-body">
             <div class="panel-title">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-sm-3 h4">Project Name</div>
-                    <div class="col-sm-2 h4">Start Date</div>
-                    <div class="col-sm-2 h4">End Date</div>
-                    <div class="col-sm-2 h4">Phase</div>
+                    <div class="col-sm-3 h4">Start Date</div>
+                    <div class="col-sm-3 h4">End Date</div>
+                    <div class="col-sm-3 h4">Phase</div>
                 </div>
-                <hr />
+                <hr style="margin-top:10px; margin-bottom:10px;" />
             </div>
-            <div class="row ">
+            <div class="row text-center">
                 <div class="col-sm-3">Tales from the Beach</div>
-                <div class="col-sm-2">2006-04-12</div>
-                <div class="col-sm-2">2008-02-18</div>
-                <div class="col-sm-2">Done</div>
-                <div class="col-sm-3">
-                    <p class="pull-right">@Html.ActionLink("Go to project", "ProjectsOne", "Home") <span class="glyphicon glyphicon-chevron-right"></span></p>
-                </div>
+                <div class="col-sm-3">2006-04-12</div>
+                <div class="col-sm-3">2008-02-18</div>
+                <div class="col-sm-3">Done</div>
             </div>
         </div>
     </div>
