--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/ProjectsTwo.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/ProjectsTwo.cshtml
@@ -21,19 +21,19 @@
         <!-- Projects Body -->
         <div class="panel-body">
             <div class="panel-title">
-                <div class="row text-center">
-                    <div class="col-sm-3 h4">Project Name</div>
-                    <div class="col-sm-3 h4">Start Date</div>
-                    <div class="col-sm-3 h4">End Date</div>
-                    <div class="col-sm-3 h4">Phase</div>
+                <div class="row">
+                    <div class="col-xs-3 h4">Project Name</div>
+                    <div class="col-xs-3 h4">Start Date</div>
+                    <div class="col-xs-3 h4">End Date</div>
+                    <div class="col-xs-3 h4">Phase</div>
                 </div>
                 <hr style="margin-top:10px; margin-bottom:10px;" />
             </div>
-            <div class="row text-center">
-                <div class="col-sm-3">Surreal</div>
-                <div class="col-sm-3">2012-10-23</div>
-                <div class="col-sm-3">2015-06-07</div>
-                <div class="col-sm-3">Re-Mastering</div>
+            <div class="row">
+                <div class="col-xs-3">Surreal</div>
+                <div class="col-xs-3">2012-10-23</div>
+                <div class="col-xs-3">2015-06-07</div>
+                <div class="col-xs-3">Re-Mastering</div>
             </div>
         </div>
     </div>
