Added some responsive changes

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 <!-- News Panel -->
 <div id="myNews"></div>
-<div class="container-fluid">
+<div class="container">
     <div class="panel panel-primary">
         <div class="panel-heading">
             <div class="row">
@@ -148,7 +148,7 @@
         </div>
         <!-- Blogs Body -->
         <!-- First -->
-        <div class="row">
+        <div class="row" style="display:table; height:100%; table-layout:fixed;">
             <div class="container-fluid">
                 <div class="panel panel-default col-sm-8" style="margin-bottom:0;">
                     <div class="panel-body" style="background-color:#F2EFDC; margin-top:20px;">
@@ -172,7 +172,7 @@
                     </div>
                     <hr />
                 </div>
-                <div class="panel panel-default col-sm-4">
+                <div class="panel panel-default col-sm-4" id="blog">
                     <div class="panel-body" style="margin-top:20px; background-color:#F2EFDC">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
@@ -217,7 +217,7 @@
                     </div>
                     <hr />
                 </div>
-                <div class="panel panel-default col-sm-4">
+                <div class="panel panel-default col-sm-4" id="blog">
                     <div class="panel-body" style="background-color:#E4E0FC">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
@@ -259,7 +259,7 @@
                     </div>
                     <hr />
                 </div>
-                <div class="panel panel-default col-sm-4">
+                <div class="panel panel-default col-sm-4" id="blog">
                     <div class="panel-body" style="background-color:#C1A7A7">
                         <div class="col-sm-4">
                             <div class="thumbnail" style="margin-top:20px;">
