--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Content/Site.css
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/Content/Site.css
@@ -136,3 +136,10 @@ hr {
 .well{
     box-shadow:none;
 }
+
+
+@media only screen and (max-width: 767px){
+    #blog{
+        display:none;
+    }
+}
